fix: word-wrap en deck

--- a/src/components/deck/deck.scss
+++ b/src/components/deck/deck.scss
@@ -61,6 +61,7 @@
 
     &__text-content {
         font-weight: bold;
+        word-wrap: break-word;
 
         &::first-letter {
             text-transform: uppercase;
